--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,25 @@
-== README
+# Product Tracker
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+Product Tracker answers your questions about a specific product by calling several online marketplaces' APIs and serving you their review data. Upon completion, Product Tracker should allow a user to login and search for a product. They should also be able to save their searches. Tentatively, the search results should show example reviews, gauge their favorability and work across several platforms. We would also like to visualize this data and allow the user to compare.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+## Features in Progress
+
+Handling a search- Passing the parameter from the search form to the model that calls the AWS API.
+
+Making the AWS API call part of a parser module.
+
+Writing a module for the Product Hunt API.
+
+Allowing for users with secure login.
+
+Persisting saved-searches to a database.
+
+Persisting individual reviews for saved searches to a database, creating the association to the original search.
+
+## Authors
+
+Stefania Druga
+Tyler Machen
+Gerardo Veltri
+
